Feat: [SRM-13248]: Add account scoped change events API (#41642)